--- a/css/style.css
+++ b/css/style.css
@@ -24,10 +24,6 @@ body{
     justify-content: space-between;
 }
 
-
-
-
-
 /* ESTILO DO HEADER */
 header{
     width: 100%;
@@ -229,78 +225,42 @@ section.produtos .flex{
 }
 
 /* Casos de Sucesso */
-.depoimentos h3{
-    text-align: center;
+
+.depoimentos{
+    width: 100%;
+    padding: 50px 4%;
+
+    max-width: 900%;
+}
+
+.depoimentos i{
+    font-size: 50px;
     color: #FACB03;
 }
 
-.depoimentos p{
-    margin-bottom: 20px;
-    text-align: center;
-    color: #FACB03;
+.depoimentos p.depoi-txt{
+    font-weight: 300;
+    margin-bottom: 40px;
 }
 
-.cards{
+.slide .person{
     display: flex;
-    justify-content: center;
+    align-items: center;
+    gap: 20px;
 }
 
-.depoimentos .card-item{
-    background-color: #FACB03;
-    margin: 15px;
-    border-radius: 14px;
-    text-align: center;
-    width: 350px;
-    transition: 0.3s;
+.slide .person img{
+    width: 80px;
+    height: 80px;
 }
 
-.depoimentos .card-item .nome-user{
-    color: #113793;
-    margin-top: 20px;
+.slide .person p.nome-person{
+    font-size: 10px;
     font-weight: 600;
-    font-size: 18px;
-    margin-bottom: 15px;
-    transition: 0.3s;
 }
 
-.depoimentos .card-item .agente{
-    color: #113793;
-    margin-top: 20px;
-    font-weight: 600;
-    font-size: 15px;
-    margin-bottom: 15px;
-    transition: 0.3s;
-}
-
-.depoimentos .card-item .depoimento-user{
-    color: #113793;
-    font-size: 13px;
-    padding: 0 15px;
-    transition: 0.3s;
-}
-
-.depoimentos .card-item .estrelas{
-    margin: 15px 0;
-    border-top: 2px solid #113793;
-}
-
-.depoimentos .card-item .estrelas i{
-    color: #113793;
-    margin-top: 15px;
-    font-size: 20px;
-    transition: 0.3s;
-}
-
-.depoimentos .card-item:hover{
-    background-color: #FACB03;
-    margin-top: -5px;
-}
-
-.depoimentos .card-item:hover .nome-user,
-.depoimentos .card-item:hover .agente,
-.depoimentos .card-item:hover .depoimento-user,
-.depoimentos .card-item:hover .estrelas i{
-    color: #113793;
+.slide .person p.func-person{
+    font-size: 14px;
 }
 
 /* ESTILO RODAPÉ */
