--- a/css/style.css
+++ b/css/style.css
@@ -217,7 +217,7 @@ section.produtos .flex{
     background-color: #FACB03;
 
     margin: auto;
-    margin-bottom: 20px;
+    margin-bottom: 40px;
 
     border-radius: 50px;
 }
@@ -261,7 +261,62 @@ section.produtos .flex{
 }
 
 /* ESTILO SOLICITAÇÃO */
+.container {
+    display: flex;
+    align-items: center;
+    background-color: #fff;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    justify-content: center;
+}
 
+.formulario {
+    max-width: 400px;
+    margin: 40px;
+}
+
+.formulario h2 {
+    margin-bottom: 20px;
+    font-size: 24px;
+    color: #333;
+}
+
+.formulario label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #555;
+}
+
+.formulario input, .formulario textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.formulario button {
+    width: 100%;
+    padding: 10px;
+    background-color: #007BFF;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.formulario button:hover {
+    background-color: #0056b3;
+}
+
+.imagem img {
+    max-width: 300px;
+    border-radius: 8px;
+}
 
 /* ESTILO RODAPÉ */
 footer{
