--- a/css/style.css
+++ b/css/style.css
@@ -264,9 +264,11 @@ section.produtos .flex{
 .container {
     display: flex;
     align-items: center;
-    background-color: #fff;
+    background-image: url(../images/Bannerrr.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     justify-content: center;
 }
 
@@ -276,9 +278,10 @@ section.produtos .flex{
 }
 
 .formulario h2 {
+    text-align: center;
     margin-bottom: 20px;
     font-size: 24px;
-    color: #333;
+    color: #FACB03;
 }
 
 .formulario label {
