--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ header{
     top: 0;
     left: 0;
     transition: 0.5s;
+    z-index: 1000;
 }
 
 header.rolagem{
@@ -64,7 +65,6 @@ header ul li a{
 
 .flex nav a:hover{
     transform: scale(1.05);
-    
 }
 
 header .btn-contato button{
@@ -132,7 +132,54 @@ header .btn-contato button:hover{
     border: 1px solid #FACB03;
 }
 
-/* ESTILO AJUDAMOS */
+/* ESTILO SOBRE */
+section.sobre{
+    padding: 80px 4%;
+}
+
+section.sobre .flex{
+    align-items: center;
+    gap: 60px;
+}
+
+.sobre .txt-sobre{
+    color: white;
+}
+
+.sobre .txt-sobre h2{
+    font-size: 30px;
+    line-height: 40px;
+    margin-bottom: 30px;
+}
+
+.sobre .txt-sobre h2 span{
+    color: #FACB03;
+}
+
+.sobre .txt-sobre p{
+    margin: 10px 0;
+    text-align: justify;
+}
+
+.sobre .btn-social button{
+    width: 150px;
+    height: 50px;
+    border-radius: 10px;
+    background-color: #FACB03;
+    font-size: 18px;
+    cursor: pointer;
+    margin: 0 5px;
+    transition: 1.2s;
+    color: #113793;
+}
+
+.img-sobre img {
+    max-width: 700px; 
+    height: auto;
+    border-radius: 40px;
+}
+
+/* ESTILO NOSSOS PRODUTOS*/
 
 .ajudamos{
     padding: 60px 0;
@@ -157,7 +204,6 @@ header .btn-contato button:hover{
     margin-bottom: 60px;
 }
 
-/* ESTILO NOSSOS BENEFICIOS*/
 section.produtos{
     padding: 40px 4%;
 }
@@ -196,7 +242,49 @@ section.produtos .flex{
 }
 
 .produtos .produtos-box p {
-    margin: 15px 0; /* Adicione uma margem para separar os elementos */
+    margin: 15px 0;
+}
+
+/* ESTILO NOSSOS BENEFICIOS */
+.swiper{
+    width: 100%;
+
+}
+
+.swiper-wrapper{
+    width: 100%;
+    height: 35em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.card{
+    width: 20em;
+    height: 90%;
+    background-color: #FACB03;
+    border-radius: 2em;
+    box-shadow: 0 0 2em rgba(0, 0, 0, .2);
+    padding: 2em 1em;
+
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+.card__image{
+    width: 10em;
+    height: 10em;
+    border-radius: 50%;
+    border: 5px solid #113793;
+    padding: 3px;
+}
+
+.card__image img{
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 /* Casos de Sucesso */
@@ -273,6 +361,9 @@ section.produtos .flex{
 }
 
 .formulario {
+    padding: 20px;
+    background-color: #FACB03;
+    border-radius: 10px;
     max-width: 400px;
     margin: 40px;
 }
@@ -281,7 +372,7 @@ section.produtos .flex{
     text-align: center;
     margin-bottom: 20px;
     font-size: 24px;
-    color: #FACB03;
+    color: #113893;
 }
 
 .formulario label {
@@ -295,7 +386,7 @@ section.produtos .flex{
     width: 100%;
     padding: 10px;
     margin-bottom: 15px;
-    border: 1px solid #ccc;
+    border: 1px solid #11389354;
     border-radius: 4px;
     font-size: 16px;
 }
@@ -303,7 +394,7 @@ section.produtos .flex{
 .formulario button {
     width: 100%;
     padding: 10px;
-    background-color: #007BFF;
+    background-color: #113893;
     color: #fff;
     border: none;
     border-radius: 4px;
